C3 version history
--------------------------------

Version 7.0.20 (09.05.2022)
- ADDED: Jumpship / Unit level to map view
- ADDED: User history panel (top right)
- FIXED: Missing flag information in scenario 2 (IS vs Clan)
- FIXED: Sometimes the name of the logged in user gets lost (top right panel)

Version 7.0.19 (06.05.2022)
- UPDATED: Several libs, switched to Java 18
- ADDED: Level progression for units / jumpships

Version 7.0.17 (25.04.2022)
- UPDATED: JavaFX to 18.0.1
- FIXED: Version variables in build files
- FIXED: Sorted deleted comments in notes plugin and added as TODOs
- FIXED: Story editor remembers the tab to open when switching nodes

Version 7.0.15 (15.04.2022)
- UPDATED: Second Scenario (IS vs Clan) Tree: maps added
- UPDATED: Story editor will remember the last path used while adding sound files
- ADDED: Faction banners for final invasion screen
- FIXED: Initializer error (multiple calls) fixed in story editor

Version 7.0.14 (13.04.2022)
- UPDATED: Dependencies to current versions
- UPDATED: Manual

Version 7.0.13 (09.04.2022)
- ADDED: Storing of different story ids depending on who attacks (introducing different invasion trees)
- FIXED: Nullpointer in route calculation
- FIXED: Mechanism to check if an invasion may be started
- FIXED: Updating offline status of users in lobby
- CHANGED: Stopped heartbeat timer if server connection is lost

Version 7.0.9 (07.04.2022)
- ADDED: Handling of connection loss

Version 7.0.6 (06.04.2022)
- ADDED: Client logs out if server sends event SERVER_GOES_DOWN
- ADDED: Server will send a heartbeat message every couple of minutes

Version 7.0.5 (04.04.2022)
- CHANGED: Dimensions of the story editor at start

Version 7.0.4 (04.04.2022)
- UPDATED: Project to Java 18 GA
- UPDATED: OpenJFX to Version 18
- UPDATED: Some other dependencies
- ADDED: FactionId to char stats (database)
--- PR#57 (KERNREAKTOR):
- UPDATED: An unused variable has been removed.